--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <span class="box">20</span>
         <div>O numero secretor é maior <i class="fa-solid fa-arrow-up-long"></i></div>
     </div>
+
+    <script src="app/sortearNumero.js"></script>
 </body>
 
 </html>
