implementando a api de reconhecimento de voz

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
 
     <script src="app/sortearNumero.js"></script>
+    <script src="app/reconhecimentoDeVoz.js"></script>
 </body>
 
 </html>
