exibindo a mensagem de voz no box de resultado

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <h1>Acerte o numero secreto</h1>
     <h3>O numero secreto está entre <span id="numero-menor">0</span> a <span id="numero-maior">100</span></h3>
     <div id="chute" class="mensagem">
-        <div>Você disse:</div>
+        <!-- <div>Você disse:</div>
         <span class="box">20</span>
-        <div>O numero secretor é maior <i class="fa-solid fa-arrow-up-long"></i></div>
+        <div>O numero secretor é maior <i class="fa-solid fa-arrow-up-long"></i></div> -->
     </div>
 
     <script src="app/sortearNumero.js"></script>
