--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <script src="app/sortearNumero.js"></script>
     <script src="app/reconhecimentoDeVoz.js"></script>
+    <script src="app/validacao.js"></script>
 </body>
 
 </html>
